--- a/web/static/index.html
+++ b/web/static/index.html
@@ -4,5 +4,6 @@
   <body>
     <div id="root"></div>
     <script src='../dist/bundle.js'></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   </body>
 </html>
